fix: working e2e for demo scripts for qvi suite integration (#501)
* get witnesses from client config

* add more config and support Prompt to confirm

* chore: correct maven repos

* debugs

* debugs

* fix putting chunks

* Add static ISSUER_OOBI (we used static BRAN in tests)

* Split creating AID and getting credential (#502)

* Split creating AID and getting credential

* Do not print Identifier name

* tidy up

---------

Co-authored-by: iFergal <fergaloconnor1998@gmail.com>

* tidy up

---------

Co-authored-by: iFergal <fergaloconnor1998@gmail.com>